--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,7 +12,8 @@
 		<script src="resources/sap-ui-core.js"
 				id="sap-ui-bootstrap"
 				data-sap-ui-libs="sap.m"
-				data-sap-ui-theme="sap_bluecrystal">
+				data-sap-ui-theme="sap_bluecrystal"
+				data-sap-ui-xx-bindingSyntax="complex">
 		</script>
 		
 		<!-- Cordova -->
